Issue #2899634 by daniel.bosen, volkerk: Image style creation layout broken

--- a/sass/components/form-element.scss
+++ b/sass/components/form-element.scss
@@ -11,7 +11,8 @@
   display: flex;
   align-items: center;
 
-  .form-textarea-wrapper {
+  .form-textarea-wrapper,
+  .image-style-preview {
     flex: 1 1 auto;
   }
 }
